MAPREDUCE-649. Validate a copy by comparing the source and destination checksums in distcp. Also adds an intra-task retry mechanism for errors detected during the copy. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816476 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -361,6 +361,10 @@ Trunk (unreleased changes)
     MAPREDUCE-916. Split the documentation to match the project split.
     (Corinne Chandel via omalley)
 
+    MAPREDUCE-649. Validate a copy by comparing the source and destination
+    checksums in distcp. Also adds an intra-task retry mechanism for errors
+    detected during the copy. (Ravi Gummadi via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
