MAPREDUCE-654. Add a -dryrun option to distcp printing a summary of the file data to be copied, without actually performing the copy. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816487 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -365,6 +365,10 @@ Trunk (unreleased changes)
     checksums in distcp. Also adds an intra-task retry mechanism for errors
     detected during the copy. (Ravi Gummadi via cdouglas)
 
+    MAPREDUCE-654. Add a -dryrun option to distcp printing a summary of the
+    file data to be copied, without actually performing the copy. (Ravi Gummadi
+    via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
