MAPREDUCE-645. Prevent distcp from running a job when the destination is a file, but the source is not. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816490 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -644,3 +644,5 @@ Trunk (unreleased changes)
     MAPREDUCE-953. Fix QueueManager to dump queue configuration in JSON format.
     (V.V. Chaitanya Krishna via yhemanth)
 
+    MAPREDUCE-645. Prevent distcp from running a job when the destination is a
+    file, but the source is not. (Ravi Gummadi via cdouglas)
