MAPREDUCE-664. Display the number of files deleted by distcp when the -delete option is specified. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816506 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -372,6 +372,9 @@ Trunk (unreleased changes)
     file data to be copied, without actually performing the copy. (Ravi Gummadi
     via cdouglas)
 
+    MAPREDUCE-664. Display the number of files deleted by distcp when the
+    -delete option is specified. (Ravi Gummadi via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
