MAPREDUCE-781. Let the name of distcp jobs be configurable. Contributed by Venkatesh S
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816516 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -375,6 +375,9 @@ Trunk (unreleased changes)
     MAPREDUCE-664. Display the number of files deleted by distcp when the
     -delete option is specified. (Ravi Gummadi via cdouglas)
 
+    MAPREDUCE-781. Let the name of distcp jobs be configurable. (Venkatesh S
+    via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
