Flushed writer in JobQueueClient so queue information is printed correctly. Contributed by V.V. Chaitanya Krishna.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816589 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -658,3 +658,7 @@ Trunk (unreleased changes)
 
     MAPREDUCE-645. Prevent distcp from running a job when the destination is a
     file, but the source is not. (Ravi Gummadi via cdouglas)
+
+    MAPREDUCE-1002. Flushed writer in JobQueueClient so queue information is
+    printed correctly. (V.V. Chaitanya Krishna via yhemanth)
+
