MAPREDUCE-1003. Fix compilation problem in eclipse plugin when eclipse.home is set. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816635 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -662,3 +662,6 @@ Trunk (unreleased changes)
     MAPREDUCE-1002. Flushed writer in JobQueueClient so queue information is
     printed correctly. (V.V. Chaitanya Krishna via yhemanth)
 
+    MAPREDUCE-1003. Fix compilation problem in eclipse plugin when
+    eclipse.home is set. (Ravi Gummadi via yhemanth)
+
