MAPREDUCE-905. Add Eclipse launch tasks for MapReduce. Contributed by Philip Zeyliger.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816641 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -381,6 +381,9 @@ Trunk (unreleased changes)
     MAPREDUCE-975. Add an API in job client to get the history file url for 
     a given job id. (sharad)
 
+    MAPREDUCE-905. Add Eclipse launch tasks for MapReduce. (Philip Zeyliger
+    via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
