MAPREDUCE-941. Vaidya script fails on Solaris. Contributed by Chad Metcalf.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816647 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -668,3 +668,6 @@ Trunk (unreleased changes)
     MAPREDUCE-1003. Fix compilation problem in eclipse plugin when
     eclipse.home is set. (Ravi Gummadi via yhemanth)
 
+    MAPREDUCE-941. Vaidya script fails on Solaris. (Chad Metcalf
+    via tomwhite)
+
