MAPREDUCE-277. Makes job history counters available on the job history viewers. Contributed by Jothi Padmanabhan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816720 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -387,6 +387,9 @@ Trunk (unreleased changes)
     MAPREDUCE-905. Add Eclipse launch tasks for MapReduce. (Philip Zeyliger
     via tomwhite)
 
+    MAPREDUCE-277. Makes job history counters available on the job history
+    viewers. (Jothi Padmanabhan via ddas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
