MAPREDUCE-923. Sqoop classpath breaks for jar files with a plus sign in their names. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816777 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -681,3 +681,5 @@ Trunk (unreleased changes)
     MAPREDUCE-941. Vaidya script fails on Solaris. (Chad Metcalf
     via tomwhite)
 
+    MAPREDUCE-923. Sqoop classpath breaks for jar files with a
+    plus sign in their names. (Aaron Kimball via tomwhite)
