MAPREDUCE-980.  Modify JobHistory to use Avro for serialization.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816801 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -121,6 +121,8 @@ Trunk (unreleased changes)
     MAPREDUCE-679. XML-based metrics as JSP servlet for JobTracker.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-980. Modify JobHistory to use Avro for serialization. (cutting)
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
