MAPREDUCE-1011. Add build.properties to svn and git ignore. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816807 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -403,6 +403,8 @@ Trunk (unreleased changes)
     without restarting the JobTracker.
     (Vinod Kumar Vavilapalli and Rahul Kumar Singh via yhemanth)
 
+    MAPREDUCE-1011. Add build.properties to svn and git ignore. (omalley)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
