MAPREDUCE-954. Change Map-Reduce context objects to be interfaces. (acmurthy)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816816 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -405,6 +405,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1011. Add build.properties to svn and git ignore. (omalley)
 
+    MAPREDUCE-954. Change Map-Reduce context objects to be interfaces.
+    (acmurthy) 
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
