MAPREDUCE-912. Add and standardize Apache license headers. Contributed by Chad Metcalf
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816822 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -697,3 +697,6 @@ Trunk (unreleased changes)
 
     MAPREDUCE-923. Sqoop classpath breaks for jar files with a
     plus sign in their names. (Aaron Kimball via tomwhite)
+
+    MAPREDUCE-912. Add and standardize Apache license headers. (Chad Metcalf
+    via cdouglas)
