MAPREDUCE-639. Change Terasort example to reflect the 2009 updates. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816831 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -408,6 +408,9 @@ Trunk (unreleased changes)
     MAPREDUCE-954. Change Map-Reduce context objects to be interfaces.
     (acmurthy) 
 
+    MAPREDUCE-639. Change Terasort example to reflect the 2009 updates. 
+    (omalley)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
