MAPREDUCE-1014. Fix the libraries for common and hdfs. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@817740 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-1014. Fix the libraries for common and hdfs. (omalley)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
