MAPREDUCE-728. Add Mumak, a Hadoop map/reduce simulator. Contributed by Arun C Murthy, Tamas Sarlos, Anirban Dasgupta, Guanying Wang, and Hong Tang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@818674 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -137,6 +137,9 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-980. Modify JobHistory to use Avro for serialization. (cutting)
 
+    MAPREDUCE-728. Add Mumak, a Hadoop map/reduce simulator. (Arun C Murthy,
+    Tamas Sarlos, Anirban Dasgupta, Guanying Wang, and Hong Tang via cdouglas)
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
