MAPREDUCE-1000. Handle corrupt history files in JobHistory.initDone(). Contributed by Jothi Padmanabhan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@818830 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -724,3 +724,5 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1022. Fix compilation of vertica testcases. (Vinod Kumar 
     Vavilapalli via acmurthy)
 
+    MAPREDUCE-1000. Handle corrupt history files in JobHistory.initDone().
+    (Jothi Padmanabhan via sharad)
