MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band heartbeat on task-completion for better job-latency. Configuration changes:   add mapreduce.tasktracker.outofband.heartbeat
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@819740 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,11 @@ Trunk (unreleased changes)
 
   OPTIMIZATIONS
 
+    MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
+    heartbeat on task-completion for better job-latency. (acmurthy) 
+    Configuration changes:
+      add mapreduce.tasktracker.outofband.heartbeat 
+
   BUG FIXES
 
     MAPREDUCE-1014. Fix the libraries for common and hdfs. (omalley)
