MAPREDUCE-1063. Document gridmix benchmark.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@823227 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -433,6 +433,8 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-639. Change Terasort example to reflect the 2009 updates. 
     (omalley)
 
+    MAPREDUCE-1063. Document gridmix benchmark. (cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
