MAPREDUCE-1076. Deprecate ClusterStatus and add javadoc in ClusterMetrics. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@824238 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -742,3 +742,6 @@ Release 0.21.0 - Unreleased
     consistent, thereby fixing inconsistencies in metering tasks.
     (Sreekanth Ramakrishnan via yhemanth)
 
+    MAPREDUCE-1076. Deprecate ClusterStatus and add javadoc in ClusterMetrics.
+    (Amareshwari Sriramadasu via sharad)
+
