--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -752,4 +752,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1030. Modified scheduling algorithm to return a map and reduce
     task per heartbeat in the capacity scheduler.
     (Rahul Kumar Singh via yhemanth)
- 
+
+    MAPREDUCE-1071. Use DataInputStream rather than FSDataInputStream in the
+    JobHistory EventReader. (Hong Tang via cdouglas)
