MAPREDUCE-986. Fix Rumen to work with truncated task lines. Contributed by Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@825044 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -755,3 +755,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1071. Use DataInputStream rather than FSDataInputStream in the
     JobHistory EventReader. (Hong Tang via cdouglas)
+
+    MAPREDUCE-986. Fix Rumen to work with truncated task lines. (Dick King via
+    cdouglas)
