MAPREDUCE-1029. Fix failing TestCopyFiles by restoring the unzipping of HDFS webapps from the hdfs jar. Contributed by Aaron Kimball and Jothi Padmanabhan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@825055 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -758,3 +758,7 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-986. Fix Rumen to work with truncated task lines. (Dick King via
     cdouglas)
+
+    MAPREDUCE-1029. Fix failing TestCopyFiles by restoring the unzipping of
+    HDFS webapps from the hdfs jar. (Aaron Kimball and Jothi Padmanabhan via
+    cdouglas)
