MAPREDUCE-769. Make findbugs and javac warnings to zero. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@825465 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -765,3 +765,7 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1029. Fix failing TestCopyFiles by restoring the unzipping of
     HDFS webapps from the hdfs jar. (Aaron Kimball and Jothi Padmanabhan via
     cdouglas)
+
+    MAPREDUCE-769. Make findbugs and javac warnings to zero.
+    (Amareshwari Sriramadasu via sharad)
+
