MAPREDUCE-1104. Initialize RecoveryManager in JobTracker cstr called by Mumak. Contributed by Hong Tang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826386 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -774,3 +774,5 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-769. Make findbugs and javac warnings to zero.
     (Amareshwari Sriramadasu via sharad)
 
+    MAPREDUCE-1104. Initialize RecoveryManager in JobTracker cstr called by
+    Mumak. (Hong Tang via cdouglas)
