MAPREDUCE-1061. Add unit test validating byte specifications for gridmix jobs.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826392 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -776,3 +776,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1104. Initialize RecoveryManager in JobTracker cstr called by
     Mumak. (Hong Tang via cdouglas)
+
+    MAPREDUCE-1061. Add unit test validating byte specifications for gridmix
+    jobs. (cdouglas)
