MAPREDUCE-931. Use built-in interpolation classes for making up task runtimes in Rumen. Contributed by Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826503 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -443,6 +443,9 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1063. Document gridmix benchmark. (cdouglas)
 
+    MAPREDUCE-931. Use built-in interpolation classes for making up task
+    runtimes in Rumen. (Dick King via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
