MAPREDUCE-1077. Fix Rumen so that truncated tasks do not mark the job as successful. Contributed by Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826508 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -782,3 +782,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1061. Add unit test validating byte specifications for gridmix
     jobs. (cdouglas)
+
+    MAPREDUCE-1077. Fix Rumen so that truncated tasks do not mark the job as
+    successful. (Dick King via cdouglas)
