MAPREDUCE-1012. Mark Context interfaces as public evolving. Contributed by Tom White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826554 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -446,6 +446,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-931. Use built-in interpolation classes for making up task
     runtimes in Rumen. (Dick King via cdouglas)
 
+    MAPREDUCE-1012. Mark Context interfaces as public evolving. (Tom White via
+    cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
