MAPREDUCE-1041. Make TaskInProgress::taskStatuses map package-private. Contributed by Jothi Padmanabhan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826558 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -788,3 +788,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1077. Fix Rumen so that truncated tasks do not mark the job as
     successful. (Dick King via cdouglas)
+
+    MAPREDUCE-1041. Make TaskInProgress::taskStatuses map package-private.
+    (Jothi Padmanabhan via cdouglas)
