MAPREDUCE-1070. Prevent a deadlock in the fair scheduler servlet. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@826565 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -791,3 +791,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1041. Make TaskInProgress::taskStatuses map package-private.
     (Jothi Padmanabhan via cdouglas)
+
+    MAPREDUCE-1070. Prevent a deadlock in the fair scheduler servlet.
+    (Todd Lipcon via cdouglas)
