MAPREDUCE-1133. Eclipse .classpath template has outdated jar files and is missing some new ones. Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@828859 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,6 +34,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1111. JT Jetty UI not working if we run mumak.sh 
     off packaged distribution directory. (hong tang via mahadev)
 
+    MAPREDUCE-1133. Eclipse .classpath template has outdated jar files and is
+    missing some new ones. (cos)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
