MAPREDUCE-1103. Added more metrics to Jobtracker. Contributed by Sharad Agarwal.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@828979 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,8 @@ Trunk (unreleased changes)
     Enhanced FileOutputCommitter to create a _SUCCESS file for successful
     jobs. (Amar Kamat & Jothi Padmanabhan via acmurthy) 
 
+    MAPREDUCE-1103. Added more metrics to Jobtracker. (sharad) 
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
