MAPREDUCE-1016.  Make the job history log format JSON.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@829281 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -814,3 +814,4 @@ Release 0.21.0 - Unreleased
     favor of max capacity percentage thus allowing the limit to go over
     queue capacity. (Rahul Kumar Singh via yhemanth)
 
+    MAPREDUCE-1016.  Make the job history log format JSON.  (cutting)
