MAPREDUCE-1048. Add occupied/reserved slot usage summary on jobtracker UI. Contributed by Amareshwari Sriramadasu and Hemanth Yamijala.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@829312 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,10 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1103. Added more metrics to Jobtracker. (sharad) 
 
+    MAPREDUCE-1048. Add occupied/reserved slot usage summary on jobtracker UI.
+    (Amareshwari Sriramadasu and Hemanth Yamijala via sharad)
+
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
