--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -43,6 +43,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1133. Eclipse .classpath template has outdated jar files and is
     missing some new ones. (cos)
 
+    MAPREDUCE-1098. Fixed the distributed-cache to not do i/o while holding a
+    global lock. (Amareshwari Sriramadasu via acmurthy)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
