MAPREDUCE-1090. Modified log statement in TaskMemoryManagerThread to include task attempt id. Contributed by Hemanth Yamijala.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@829529 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -25,6 +25,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1048. Add occupied/reserved slot usage summary on jobtracker UI.
     (Amareshwari Sriramadasu and Hemanth Yamijala via sharad)
 
+    MAPREDUCE-1090. Modified log statement in TaskMemoryManagerThread to
+    include task attempt id. (yhemanth)
 
   OPTIMIZATIONS
 
