MAPREDUCE-1089. Fix NPE in fair scheduler preemption when tasks are scheduled but not running. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@830821 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -37,6 +37,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-1089. Fix NPE in fair scheduler preemption when tasks are
+    scheduled but not running. (Todd Lipcon via matei)
+
     MAPREDUCE-1014. Fix the libraries for common and hdfs. (omalley)
 
     MAPREDUCE-1111. JT Jetty UI not working if we run mumak.sh 
