MAPREDUCE-1160. Reduce verbosity of log lines in some Map/Reduce classes to avoid filling up jobtracker logs on a busy cluster. Contributed by Ravi Gummadi and Hong Tang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@830837 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1158. Fix JT running maps and running reduces metrics.
     (sharad)
 
+    MAPREDUCE-1160. Reduce verbosity of log lines in some Map/Reduce classes
+    to avoid filling up jobtracker logs on a busy cluster.
+    (Ravi Gummadi and Hong Tang via yhemanth)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
