MAPREDUCE-1153. Fix tasktracker metrics when trackers are decommissioned. Contributed by Sharad Agarwal.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@831813 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -61,6 +61,9 @@ Trunk (unreleased changes)
     to avoid filling up jobtracker logs on a busy cluster.
     (Ravi Gummadi and Hong Tang via yhemanth)
 
+    MAPREDUCE-1153. Fix tasktracker metrics when trackers are decommissioned.
+    (sharad)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
