MAPREDUCE-1036. Document Sqoop API. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@832362 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -31,6 +31,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1069. Implement Sqoop API refactoring. (Aaron Kimball via
     tomwhite)
 
+    MAPREDUCE-1036. Document Sqoop API. (Aaron Kimball via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
