MAPREDUCE-1037. Continue running contrib tests if Sqoop tests fail. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@832992 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -848,3 +848,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1038. Weave Mumak aspects only if related files have changed.
     (Aaron Kimball via cdouglas)
+
+    MAPREDUCE-1037. Continue running contrib tests if Sqoop tests fail. (Aaron
+    Kimball via cdouglas)
