MAPREDUCE-1163. Remove unused, hard-coded paths from libhdfs. Contributed by Allen Wittenauer
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@832997 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -851,3 +851,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1037. Continue running contrib tests if Sqoop tests fail. (Aaron
     Kimball via cdouglas)
+
+    MAPREDUCE-1163. Remove unused, hard-coded paths from libhdfs. (Allen
+    Wittenauer via cdouglas)
