MAPREDUCE-707. Provide a jobconf property for explicitly assigning a job to a pool in the Fair Scheduler. Contributed by Alan Heirich.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@833117 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-707. Provide a jobconf property for explicitly assigning a job to 
+    a pool in the Fair Scheduler. (Alan Heirich via matei)
+
     MAPREDUCE-999. Improve Sqoop test speed and refactor tests.
     (Aaron Kimball via tomwhite)
 
