MAPREDUCE-1177. Correct setup/cleanup inversion in JobTracker::getTaskReports. Contributed by Vinod Kumar Vavilapalli
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@833275 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -863,4 +863,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-962. Fix a NullPointerException while killing task process 
     trees. (Ravi Gummadi via yhemanth)
-    
+
+    MAPREDUCE-1177. Correct setup/cleanup inversion in
+    JobTracker::getTaskReports. (Vinod Kumar Vavilapalli via cdouglas)
